--- a/examplDocON.yaml
+++ b/examplDocON.yaml
@@ -1,26 +1,14 @@
 ---
 #https://docs.ansible.com/ansible/latest/user_guide/playbooks_intro.html
-- name: update web servers
+
+
+- name: update db servers
   hosts: localhost
   remote_user: root
 
   tasks:
-  - name: ensure apache is at the latest version
-    yum:
-      name: httpd
-      state: latest
-  - name: write the apache config file
-    template:
-      src: /srv/httpd.j2
-      dest: /etc/httpd.conf
-
-- name: update db servers
-  hosts: databases
-  remote_user: root
-
-  tasks:
   - name: ensure postgresql is at the latest version
-    yum:
+    apt:
       name: postgresql
       state: latest
   - name: ensure that postgresql is started
@@ -28,3 +16,16 @@
       name: postgresql
       state: started
       
+- name: update web servers
+  hosts: localhost
+  remote_user: root
+
+  tasks:
+  - name: ensure apache is at the latest version
+    apt:
+      name: apache2
+      state: latest
+  - name: write the apache config file
+    template:
+      src: /srv/httpd.j2
+      dest: /etc/httpd.conf
